--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,260 @@
-h1,h2,h3,h4,h5,h6,body {
+h1,h2,h3,h4,h5,h6,figure,p{
     margin: 0;
     padding: 0;
 }
 
-h1 {
-    border-bottom: 1px dotted lightgray;
-    padding-bottom: 3px;
+.container {
+    width: 920px;
+    margin: 0 auto;
+    background-image: url(../images/pika.jpg);
 }
 
-.container {
-    width: 90%;
+#Encabezado {
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    align-items: center;
+}
+
+#Encabezado figure {
+    margin: 0;
+}
+
+#titulos * {
+    margin: 0;
+    
+}
+
+#Encabezado h1 { 
+    font-size: 1.2em; 
+    text-decoration: underline;
+}
+#Encabezado h2 { font-size: 1em;   }
+#Encabezado h3 { font-size: 0.9em; }
+#Encabezado h4 { font-size: 0.8em; }
+
+#personajes {
+    height: 360px;
+    margin: 20px 0;
+    box-shadow: 0 0 15px grey ;
+    
+}
+
+#personajes img{
+    border: 10px solid white;
+    
+}
+#informacion{
+    min-height: 300px;
+    width: 700px;
+    display: inline-block;
+
+    }
+#informacion article{
+    display: flex;
+    background-image: url(../images/separacion-notas.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    
+}
+.imagen-personaje{
+    position:relative;
+}
+
+.imagen-personaje span{
+    position: absolute;
+    top: 10px;
+    left: -5px;
+    padding: 5px 10px;
+    background-color: lightgray;
+}
+
+.titulo-nota{
+    line-height: 0.9em;
+    font-variant: small-caps;
+    
+}
+
+.info-personaje {
+    padding: 20px 0px;
+    text-align: justify;
+
+}
+.cuerpo-nota-info {
+    padding: 0px 20px;
+}
+#Publicidad {
+    min-height: 300px;
+    width: 220px;
+    display: inline-block;
+    
+}
+
+#Pie {
+    height: 150px;
+    clear: both;
+    margin-top: 50px;
+}
+
+#menu {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    background-color:firebrick;    
+}
+#menu ul {
+    padding: 0;
+}
+
+#menu li { 
+    list-style-type: none;
+    padding: 0;
+    display: inline-block;
+    
+}
+
+#menu li a {
+    text-decoration: none;
+    color: black;
+    font: inherit;
+    
+}
+
+#menu>ul>li {
+    display: inline-block;
+}
+
+#menu>ul>li>a {
+    padding: 10px;   
+}    
+
+#menu>ul>li>a:hover {    
+    background-color:red;
+    transition: 0.1s;
+} 
+/* div para hacer el "boton" de leer mas */
+.boton {
+    background: darkgray;
+    display: inline-block;
+    padding: 2px;
+    box-shadow: 0px 2px 3px darkgray;
+}
+
+.boton>div {
+    padding: 0px 20px;
+    border: .4px solid rgba(255,255,255,.3);
+}
+
+.boton p{
+    color: red;
+    font-variant: small-caps;
+    font-size: .9em;
+}
+.sombra-imagen{
+    box-shadow: 0px 0px 15px darkgray;
+}
+.flexible {
+    display: flex
+}
+
+#programas {
+  display:flex;
+  justify-content:  space-between;
+  margin-bottom: 20px; 
+}
+#social{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.facebook,.twitter,.instagram,.vimeo,.youtube,.google, .instagram{
+    width: 55px;
+    height: 55px;
+    display: inline-block;
+    text-indent:-9999px;
+    transition: 0.5s;
+}
+.twitter { 
+background: url('../images/sociales/redes.jpg') 0 0; 
+} 
+.facebook { 
+background: url('../images/sociales/redes.jpg') -53px 0; 
+} 
+.google { 
+background: url('../images/sociales/redes.jpg') -116px 0; 
+} 
+.instagram { 
+background: url('../images/sociales/redes.jpg') -171px 0; 
+} 
+.vimeo{ 
+background: url('../images/sociales/redes.jpg') -231px 0; 
+} 
+.youtube{ 
+background: url('../images/sociales/redes.jpg') -287px 0; 
+} 
+.twitter:hover { 
+background: url('../images/sociales/redes.jpg') 0 -58px; 
+} 
+.facebook:hover { 
+background: url('../images/sociales/redes.jpg') -58px -58px; 
+} 
+.google:hover{ 
+background: url('../images/sociales/redes.jpg') -118px -60px; 
+} 
+.instagram:hover { 
+background: url('../images/sociales/redes.jpg') -174px -60px; 
+} 
+.vimeo:hover{ 
+background: url('../images/sociales/redes.jpg') -232px -60px; 
+} 
+.youtube:hover{ 
+background: url('../images/sociales/redes.jpg') -290px -60px; 
+}  
+.politicas {
+  text-align: center;
+   border-top: 3px double red;
+   border-bottom: 3px double red;
+   padding: 5px 0; 
+   color: black;
+}
+.politicas abbr{
+    cursor: help;
+    border-bottom: 1px dotted lightgray;
+}
+
+#logo-sems {
+  background-image: url('../images/pika.jpg');
+    height: 60px;
+    width: 215px;
+    display: block;
+    text-indent: -9999px;
     margin: auto;
 }
 
-.container-fluid {
-    width: 100%;
-}
-#cabecera {
-    min-height: 800px;
-    background-image: url('../images/las_glorias.png');
-    background-size: cover;
+#separador-sems {
+    margin: 30px 0;
+    position:relative;
 }
 
-#navbar {
-    height: 80px;
-    width: 100%;
-    position: fixed;
-    background-image: linear-gradient(0deg, rgba(255,255,255,0.00) 0%, #000000 100%);
+#logo-sems::before , #logo-sems::after {
+    content: "";
+    border-top: 3px double yellow;
+    position: absolute;
+    height: 3px;
+    width: 340px;
+    top: 30px;
 }
+#logo-sems::before {
+    left: 0; 
+}
+#logo-sems::after {
+    right: 0; 
+}
+#direccion {
+   text-align: center;
+    color: darkgray;
+    font-size: 0.8em;
+}
+
